# CSC-317-Showcase

./: .gitignore  CMakeLists.txt  README.md  multi-run.sh  multi-run.zsh  piece.ppm
AABB/include/: Triangle.h  TriangleSoup.h  blinn_phong_shading.h  first_hit.h  raycolor.h  read_json.h
AABB/src/: Triangle.cpp  TriangleSoup.cpp  blinn_phong_shading.cpp  first_hit.cpp  raycolor.cpp
Code/: main.cpp
Code/include/: AABBTree.h  MeshTriangle.h  Plane.h  Triangle.h  blinn_phong_shading.h  file_name.h
Code/src/: Plane.cpp  blinn_phong_shading.cpp  insert_triangle_into_box.cpp  ray_intersect_box.cpp  ray_intersect_triangle.cpp  triangle_triangle_intersection.cpp  viewing_ray.cpp  write_ppm.cpp
data/: bunny.json  wind-dragon.json  wind_dragon.json
include/: Material.h  Object.h  Plane.h  Sphere.h  TriangleSoup.h  ray_intersect_triangle.h  raycolor.h  read_json.h
src/: AABBTree.cpp  AABBTree_ray_intersect.cpp  DirectionalLight.cpp  Plane.cpp  PointLight.cpp  Sphere.cpp  Triangle.cpp  TriangleSoup.cpp  blinn_phong_shading.cpp  box_box_intersect.cpp  creative.json  first_hit.cpp  insert_box_into_box.cpp  raycolor.cpp  reflect.cpp  viewing_ray.cpp
